# EarTrainer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  chord_relative_experiments.ipynb  pyproject.toml  requirements.txt
analytics/: __init__.py  config.py  demo.py  metrics.py  plots.py  prepare.py  smoothing.py
docs/: architecture.md  audio.md  drill_parameters.md  drills.md  overview.md  roadmap.md  session.md  theory.md  tracing.md
eartrainer/: __init__.py  main.py
eartrainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eartrainer/app/: cli.py  drill_registry.py  events.py  explain.py  gui.py  gui_controls.py  presets.py  session_manager.py  training_sets.py
eartrainer/audio/: drone.py  playback.py  synthesis.py
eartrainer/config/: config.py  defaults.yml
eartrainer/drills/: __init__.py  base_drill.py  chord_id.py  chord_relative.py  interval_harmonic.py  melody.py  note_drill.py
eartrainer/eartrainer_Cpp/: README.md  __init__.py  build_and_install.sh  example.py  get_levels.py  requirment.txt  test.ipynb  test_adaptive.ipynb  test_engine_adaptive.ipynb  test_levels.ipynb
eartrainer/eartrainer_Cpp/cpp/: CMakeLists.txt
eartrainer/eartrainer_Cpp/cpp/assistance/: assistance.cpp  assistance.hpp
eartrainer/eartrainer_Cpp/cpp/controller/: drill_hub.cpp
eartrainer/eartrainer_Cpp/cpp/drills/: chord.cpp  chord.hpp  chord_core.cpp  chord_core.hpp  common.hpp  drill.hpp  harmony.cpp  harmony.hpp  interval.cpp  interval.hpp  melody.cpp  melody.hpp  note.cpp  note.hpp  params.hpp  pathways.cpp  pathways.hpp  prompt_utils.hpp
eartrainer/eartrainer_Cpp/cpp/include/ear/: adaptive_catalog.hpp  adaptive_drills.hpp  chord_types.hpp  chord_voicings.hpp  drill_factory.hpp  drill_hub.hpp  drill_spec.hpp  level_inspector.hpp  midi_clip.hpp  question_bundle_v2.hpp  session_engine.hpp  track_selector.hpp  types.hpp
eartrainer/eartrainer_Cpp/cpp/include/nlohmann/: json.hpp
eartrainer/eartrainer_Cpp/cpp/include/resources/: adaptive_catalog_builtin.hpp  builtin_chord_levels.hpp  builtin_degree_levels.hpp  builtin_make.hpp  builtin_melody_levels.hpp  catalog_base.hpp  catalog_manager.hpp  catalog_manager2.hpp  chord_levels.hpp  drill_params.hpp  harmony_levels.hpp  level_catalog.hpp  melody_levels.hpp  schema.hpp  track_selector_builtin.hpp
eartrainer/eartrainer_Cpp/cpp/include/utils/: drill_schema.hpp  param_schema.hpp
eartrainer/eartrainer_Cpp/cpp/scoring/: scoring.cpp  scoring.hpp
eartrainer/eartrainer_Cpp/cpp/src/: adaptive_catalog.cpp  adaptive_catalog_builtin.cpp  adaptive_drills.cpp  bindings.cpp  chord_voicings.cpp  drill_factory.cpp  json_bridge.cpp  json_bridge.hpp  level_inspector.cpp  midi_clip.cpp  rng.hpp  session_engine.cpp  track_selector.cpp  track_selector_builtin.cpp
eartrainer/eartrainer_Cpp/cpp/src/resources/: catalog_manager.cpp
eartrainer/eartrainer_Cpp/cpp/tests/: test_session_engine.cpp
eartrainer/eartrainer_Cpp/cpp/tests/catalogs/: chord_levels_test.json  chord_levels_test.yml  degree_levels_test.json  degree_levels_test.yml  melody_levels_test.json  melody_levels_test.yml
eartrainer/eartrainer_Cpp/python/: README.md  pyproject.toml
eartrainer/eartrainer_Cpp/python/eartrainer/: __init__.py  midi.py  models.py  session_engine.py  ui_demo.py
eartrainer/eartrainer_Cpp/python/tests/: test_bridge.py
eartrainer/eartrainer_Cpp/resources/: adaptive_levels.yml  degree_levels.json  degree_levels.yml  melody_levels.yml
eartrainer/eartrainer_Cpp/resources/voicings/: strings_voicing.json  triads_major_scale.yml
eartrainer/policy/: mistake_manager.py
eartrainer/python/gui/: __init__.py  app.py  events.py  presets.py  training_sets.py
eartrainer/resources/: README.md  voicings.yml
eartrainer/resources/drones/: strings_basic.yml
eartrainer/resources/pathways/: basic.yml
eartrainer/resources/training_sets/: basic.yml
eartrainer/resources/voicings/: piano_basic.yml
eartrainer/results/: persist.py  result_manager.py  schema.py
eartrainer/samplers/: melody_sampler.py
eartrainer/stats/: stats.py
eartrainer/storage/: __init__.py  schema.py  store.py
eartrainer/theory/: __init__.py  chord.py  chords.py  harmony.py  keys.py  note_utils.py  pathways.py  scale.py  scales.py  voicing_bank.py  voicing_selector.py  voicings.py
eartrainer/tools/: __init__.py  play_voicings.py
eartrainer/util/: randomness.py
ios/EarTrainerApp/EarTrainerApp/: EarTrainerApp.swift
ios/EarTrainerApp/EarTrainerApp.xcodeproj/: project.pbxproj
ios/EarTrainerApp/EarTrainerApp.xcodeproj/xcshareddata/xcschemes/: EarTrainerApp.xcscheme
ios/EarTrainerApp/EarTrainerAppTests/: EarTrainerAppTests.swift
ios/EarTrainerApp/EarTrainerAppUITests/: EarTrainerAppUITests.swift  EarTrainerAppUITestsLaunchTests.swift
reports/: analytics_snapshot.csv
storage/: __init__.py  schema.py  store.py
