[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eartrainer-core"
version = "0.1.0"
description = "Ear training SessionEngine bindings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ear Trainer Team"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Education :: Testing",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}
packages = ["eartrainer"]
include-package-data = true
